--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
         "gatsby-plugin-offline": "^3.0.17",
         "gatsby-plugin-react-helmet": "^3.1.13",
         "gatsby-plugin-sharp": "^2.2.34",
+        "gatsby-plugin-tinacms": "^0.1.9",
         "gatsby-source-filesystem": "^2.1.35",
+        "gatsby-tinacms-git": "^0.2.7",
+        "gatsby-tinacms-remark": "^0.4.0",
         "gatsby-transformer-remark": "^2.6.32",
         "gatsby-transformer-sharp": "^2.3.1",
         "install": "^0.13.0",
