--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "gatsby-image": "^2.2.30",
         "gatsby-plugin-manifest": "^2.2.25",
         "gatsby-plugin-offline": "^3.0.17",
+        "gatsby-plugin-postcss": "^2.1.13",
         "gatsby-plugin-react-helmet": "^3.1.13",
         "gatsby-plugin-sharp": "^2.2.34",
         "gatsby-plugin-tinacms": "^0.1.9",
@@ -25,7 +26,8 @@
         "react-helmet": "^5.2.1"
     },
     "devDependencies": {
-        "prettier": "^1.18.2"
+        "prettier": "^1.18.2",
+        "tailwindcss": "^1.1.3"
     },
     "keywords": [
         "gatsby"
