--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "author": "Kyle Mathews <mathews.kyle@gmail.com>",
     "dependencies": {
         "gatsby": "^2.17.6",
+        "gatsby-cli": "^2.8.8",
         "gatsby-image": "^2.2.30",
         "gatsby-plugin-manifest": "^2.2.25",
         "gatsby-plugin-offline": "^3.0.17",
         "gatsby-plugin-postcss": "^2.1.13",
         "gatsby-plugin-react-helmet": "^3.1.13",
-        "gatsby-plugin-sharp": "^2.2.34",
-        "gatsby-plugin-tinacms": "^0.1.9",
+        "gatsby-plugin-sharp": "^2.2.36",
+        "gatsby-plugin-typography": "^2.3.15",
+        "gatsby-remark-images": "^3.1.29",
         "gatsby-source-filesystem": "^2.1.35",
-        "gatsby-tinacms-git": "^0.2.7",
-        "gatsby-tinacms-remark": "^0.4.0",
         "gatsby-transformer-remark": "^2.6.32",
         "gatsby-transformer-sharp": "^2.3.1",
         "install": "^0.13.0",
@@ -23,7 +23,9 @@
         "prop-types": "^15.7.2",
         "react": "^16.11.0",
         "react-dom": "^16.11.0",
-        "react-helmet": "^5.2.1"
+        "react-helmet": "^5.2.1",
+        "react-typography": "^0.16.19",
+        "typography": "^0.16.19"
     },
     "devDependencies": {
         "prettier": "^1.18.2",
@@ -38,7 +40,7 @@
         "develop": "gatsby develop",
         "clean": "gatsby clean",
         "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
-        "start": "npm run develop && npm run clean",
+        "start": "npm run clean && npm run develop",
         "serve": "gatsby serve",
         "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
     },
